--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Alif Ekasmara",
 	"description": "This project is to fulfilled the freecodecamp course",
-	"keywords": ["freecodecamp", "bootcamp", "backend", "web"],
+	"keywords": [
+		"freecodecamp",
+		"bootcamp",
+		"backend",
+		"web"
+	],
 	"license": "MIT",
 	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"moment": "^2.29.1"
 	},
 	"main": "server.js",
 	"scripts": {
