--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
 		"web"
 	],
 	"license": "MIT",
-	"version": "1.0.0",
+	"version": "2.10.2",
 	"dependencies": {
 		"express": "^4.14.0",
-		"moment": "^2.14.0"
+		"moment": "2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
