--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"version": "2.10.2",
 	"dependencies": {
 		"express": "^4.14.0",
-		"moment": "~2.10.x"
+		"moment": "~2.10.2"
 	},
 	"main": "server.js",
 	"scripts": {
