--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "body-parser": "^1.15.2",
         "dotenv": "^8.2.0",
         "express": "^4.12.4",
+        "mongodb": "^4.4.0",
         "mongoose": "^6.2.4"
     },
     "repository": {
